# spot

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  THANKS  configure.ac  lrde-upload.sh
bench/gspn-ssp/: .gitignore  Makefile.am  bench  bench.mk  benchaux  defs.in  gen  sum  sumall
doc/: .cvsignore  .gitignore  Doxyfile.in  Makefile.am  mainpage.dox
iface/gspn/: .cvsignore  .gitignore  Makefile.am  common.cc  common.hh  dcswave.test  dcswaveeltl.test  dcswavefm.test  dcswaveltl.test  dottyeesrg.cc  dottygspn.cc  dottyssp.cc  eesrg.cc  eesrg.hh  gspn.cc  gspn.hh  gspnlib.h  ltleesrg.cc  ltlgspn.cc  simple.test  ssp.cc  ssp.hh  udcsefm.test  udcseltl.test  udcsfm.test  udcsltl.test
lbtt/src/: .cvsignore  .gitignore  Alloc.h  BitArray.cc  BitArray.h  Bitset.h  BuchiAutomaton.cc  BuchiAutomaton.h  BuchiProduct.cc  BuchiProduct.h  Config-lex.ll  Config-parse.yy  Configuration.cc  Configuration.h  DispUtil.cc  DispUtil.h  EdgeContainer.h  Exception.h  ExternalTranslator.cc  ExternalTranslator.h  FormulaRandomizer.cc  FormulaRandomizer.h  FormulaWriter.h  Graph.h.in  IntervalList.cc  IntervalList.h  LbtWrapper.h  LbttAlloc.h  Ltl-parse.yy  LtlFormula.cc  LtlFormula.h  Makefile.am  NeverClaim-lex.ll  NeverClaim-parse.yy  NeverClaimAutomaton.cc  NeverClaimAutomaton.h  PathEvaluator.cc  PathEvaluator.h  PathIterator.cc  PathIterator.h  (+35 more)
src/: .cvsignore  .gitignore  Makefile.am
src/eltlast/: Makefile.am  allnodes.hh  atomic_prop.hh  automatop.cc  automatop.hh  binop.hh  constant.hh  formula.hh  multop.hh  nfa.cc  nfa.hh  refformula.hh  unop.hh  visitor.hh
src/eltlenv/: Makefile.am  declenv.hh  defaultenv.hh  environment.hh
src/eltlparse/: .gitignore  Makefile.am  eltlparse.yy  eltlscan.ll  fmterror.cc  parsedecl.hh  public.hh
src/eltltest/: .gitignore  Makefile.am  acc.cc  acc.test  nfa.cc  nfa.test
src/eltlvisit/: Makefile.am  clone.cc  clone.hh  destroy.cc  destroy.hh  lunabbrev.cc  lunabbrev.hh  nenoform.cc  nenoform.hh  postfix.cc  postfix.hh  tostring.cc  tostring.hh
src/evtgba/: evtgba.hh  evtgbaiter.hh  product.cc  product.hh
src/evtgbaalgos/: Makefile.am  save.cc  tgba2evtgba.cc
src/evtgbaparse/: .cvsignore  Makefile.am  evtgbaparse.yy  evtgbascan.ll  fmterror.cc  parsedecl.hh  public.hh
src/evtgbatest/: .cvsignore  .gitignore  Makefile.am  defs.in  explicit.test  ltl2evtgba.cc  ltl2evtgba.test  product.cc  product.test  readsave.cc  readsave.test
src/internal/: Makefile.am  atomic_prop.hh  atomic_prop.hxx  baseformula.cc  baseformula.hh  binop.hh  binop.hxx  constant.hh  constant.hxx  declenv.hh  declenv.hxx  defaultenv.hh  defaultenv.hxx  environment.hh  formula.hh  formula.hxx  multop.hh  multop.hxx  predecl.hh  refformula.hh  refformula.hxx  unop.hh  unop.hxx
src/kripke/: Makefile.am  fairkripke.cc  fairkripke.hh  kripke.cc  kripke.hh
src/ltlast/: Makefile.am  allnodes.hh  atomic_prop.cc  atomic_prop.hh  automatop.cc  automatop.hh  binop.cc  binop.hh  bunop.cc  bunop.hh  constant.cc  constant.hh  formula.cc  formula.hh  formula_tree.cc  formula_tree.hh  formulae.hh  multop.cc  multop.hh  nfa.cc  nfa.hh  predecl.hh  refformula.cc  refformula.hh  unop.cc  unop.hh  visitor.hh
src/ltlenv/: .cvsignore  Makefile.am  declenv.cc  declenv.hh  defaultenv.cc  defaultenv.hh  environment.hh
src/ltlparse/: .cvsignore  Makefile.am  fmterror.cc  ltlfile.cc  ltlfile.hh  ltlparse.yy  ltlscan.ll  parsedecl.hh  public.hh
src/ltltest/: .cvsignore  .gitignore  Makefile.am  consterm.cc  consterm.test  defs.in  equals.cc  equals.test  formulae.txt  formules.ltl  genltl.cc  inf.cc  inf.test  kind.cc  kind.test  lunabbrev.test  nenoform.test  parse.test  parseerr.test  randltl.cc  readltl.cc  reduc.cc  reduc.test  reduccmp.test  reducpsl.test  syntimpl.cc  syntimpl.test  tostring.cc  tostring.test  tunabbrev.test  tunenoform.test
src/ltlvisit/: .gitignore  Makefile.am  apcollect.cc  apcollect.hh  basereduc.cc  basicreduce.cc  basicreduce.hh  clone.cc  clone.hh  consterm.cc  consterm.hh  contain.cc  contain.hh  destroy.cc  destroy.hh  dotty.cc  dotty.hh  dump.cc  dump.hh  equals.cc  equals.hh  forminf.cc  formlength.cc  kind.cc  kind.hh  length.cc  length.hh  lunabbrev.cc  lunabbrev.hh  mark.cc  mark.hh  nenoform.cc  nenoform.hh  postfix.cc  postfix.hh  randomltl.cc  randomltl.hh  reduce.cc  reduce.hh  reducform.cc  (+9 more)
src/misc/: Makefile.am  bareword.cc  bareword.hh  bddalloc.cc  bddalloc.hh  bddlt.hh  bddop.cc  bddop.hh  const_sel.hh  escape.cc  escape.hh  fixpool.hh  freelist.cc  freelist.hh  hash.hh  hashfunc.hh  intvcmp2.cc  intvcmp2.hh  intvcomp.cc  intvcomp.hh  ltstr.hh  minato.cc  minato.hh  modgray.hh  optionmap.cc  optionmap.hh  random.cc  random.hh  timer.cc  timer.hh  version.cc  version.hh
src/neverclaimparse/: Makefile.am  fmterror.cc  neverclaimparse.yy  neverclaimscan.ll  public.hh
src/neverparse/: .gitignore  Makefile.am  neverclaimparse.yy  neverclaimscan.ll  parsedecl.hh  public.hh
src/saba/: Makefile.am  explicitstateconjunction.cc  explicitstateconjunction.hh  saba.cc  saba.hh  sabacomplementtgba.cc  sabacomplementtgba.hh  sabastate.hh  sabasucciter.hh
src/sabaalgos/: Makefile.am  sabadotty.cc  sabadotty.hh  sabareachiter.cc  sabareachiter.hh
src/sabatest/: Makefile.am  defs.in  sabacomplementtgba.cc
src/sanity/: .gitignore  80columns.test  Makefile.am  includes.test  readme.test  style.test
src/saut/: .cvsignore  Makefile.am  saut.cc  saut.hh  sync.cc  sync.hh
src/sautparse/: .gitignore  Makefile.am  fmterror.cc  parsedecl.hh  public.hh  result.cc  sautparse.yy  sautscan.ll
src/sauttest/: .cvsignore  Makefile.am  parse.cc
src/ta/: Makefile.am  ta.cc  ta.hh  taexplicit.cc  taexplicit.hh  taproduct.cc  taproduct.hh
src/taalgos/: Makefile.am  dotty.cc  dotty.hh  emptinessta.cc  emptinessta.hh  minimize.cc  minimize.hh  reachiter.cc  reachiter.hh  sba2ta.cc  sba2ta.hh  statessetbuilder.cc  statessetbuilder.hh  stats.cc  stats.hh
src/tgba/: Makefile.am  bdddict.cc  bdddict.hh  bddfactory.cc  bddfactory.hh  bddprint.cc  bddprint.hh  dictunion.cc  dictunion.hh  (+64 more)
wrap/: .cvsignore  Makefile.am  spot.i
(+393 files in other folders)
