## Copyright (C) 2008  Laboratoire d'Informatique de Paris 6 (LIP6),
## département Systèmes Répartis Coopératifs (SRC), Université Pierre
## et Marie Curie.
##
## This file is part of Spot, a model checking library.
##
## Spot is free software; you can redistribute it and/or modify it
## under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## Spot is distributed in the hope that it will be useful, but WITHOUT
## ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
## or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
## License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Spot; see the file COPYING.  If not, write to the Free
## Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
## 02111-1307, USA.

EXTRA_DIST = 					\
  bench						\
  benchaux					\
  gen						\
  sum						\
  sumall					\
  templates/bagrodia/bagrodia.con		\
  templates/bagrodia/bagrodia.def		\
  templates/bagrodia/bagrodia.gd		\
  templates/bagrodia/bagrodia.net		\
  templates/bagrodia/bagrodia.prop		\
  templates/bagrodia/gen			\
  templates/common				\
  templates/gen					\
  templates/predef/gen				\
  templates/predef/WCSasym10.def		\
  templates/predef/WCSasym10.net		\
  templates/predef/WCSasym10.tobs		\
  templates/predef/WCSasym2.def			\
  templates/predef/WCSasym2.net			\
  templates/predef/WCSasym2.tobs		\
  templates/predef/WCSasym3.def			\
  templates/predef/WCSasym3.net			\
  templates/predef/WCSasym3.tobs		\
  templates/predef/WCSasym4.def			\
  templates/predef/WCSasym4.net			\
  templates/predef/WCSasym4.tobs		\
  templates/predef/WCSasym5.def			\
  templates/predef/WCSasym5.net			\
  templates/predef/WCSasym5.tobs		\
  templates/predef/WCSasym6.def			\
  templates/predef/WCSasym6.net			\
  templates/predef/WCSasym6.tobs		\
  templates/predef/WCSasym8.def			\
  templates/predef/WCSasym8.net			\
  templates/predef/WCSasym8.tobs		\
  templates/WCSsym/gen				\
  templates/WCSsym/WCSsym.con			\
  templates/WCSsym/WCSsym.def			\
  templates/WCSsym/WCSsym.gd			\
  templates/WCSsym/WCSsym.net			\
  templates/WCSsym/WCSsym.prop			\
  trans2prop.pl
