AM_CPPFLAGS = -I$(srcdir)/..
AM_CXXFLAGS = $(WARNING_CXXFLAGS)

lib_LIBRARIES = libltlast.a
libltlast_a_SOURCES = \
  allnodes.hh \
  atomic_prop.cc \
  atomic_prop.hh \
  binop.cc \
  binop.hh \
  constant.cc \
  constant.hh \
  formula.hh \
  multop.cc \
  multop.hh \
  predecl.hh \
  unop.cc \
  unop.hh

