AM_CPPFLAGS = -I$(srcdir)/..
AM_CXXFLAGS = $(WARNING_CXXFLAGS)

noinst_LTLIBRARIES = libltlast.la
libltlast_la_SOURCES = \
  allnodes.hh \
  atomic_prop.cc \
  atomic_prop.hh \
  binop.cc \
  binop.hh \
  constant.cc \
  constant.hh \
  formula.hh \
  formula.cc \
  multop.cc \
  multop.hh \
  predecl.hh \
  refformula.cc \
  refformula.hh \
  unop.cc \
  unop.hh \
  visitor.hh
