AM_CPPFLAGS = -I$(srcdir)/..
AM_CXXFLAGS = $(WARNING_CXXFLAGS)

lib_LTLIBRARIES = libltlvisit.la
libltlvisit_la_SOURCES = \
  clone.cc \
  clone.hh \
  dotty.cc \
  dotty.hh \
  dump.cc \
  dump.hh \
  tostring.cc \
  tostring.hh \
  equals.cc \
  equals.hh \
  lunabbrev.hh \
  lunabbrev.cc \
  nenoform.hh \
  nenoform.cc \
  tunabbrev.hh \
  tunabbrev.cc