AM_CPPFLAGS = -I$(srcdir)/..
AM_CXXFLAGS = $(WARNING_CXXFLAGS)

noinst_LTLIBRARIES = libltlvisit.la
libltlvisit_la_SOURCES = \
  clone.cc \
  clone.hh \
  destroy.cc \
  destroy.hh \
  dotty.cc \
  dotty.hh \
  dump.cc \
  dump.hh \
  tostring.cc \
  tostring.hh \
  lunabbrev.hh \
  lunabbrev.cc \
  nenoform.hh \
  nenoform.cc \
  postfix.hh \
  postfix.cc \
  tunabbrev.hh \
  tunabbrev.cc
