AM_CPPFLAGS = -I$(srcdir)/..
AM_CXXFLAGS = $(WARNING_CXXFLAGS)

ltlvisitdir = $(pkgincludedir)/ltlvisit

ltlvisit_HEADERS = \
  clone.hh \
  destroy.hh \
  dotty.hh \
  dump.hh \
  tostring.hh \
  lunabbrev.hh \
  nenoform.hh \
  postfix.hh \
  tunabbrev.hh

noinst_LTLIBRARIES = libltlvisit.la
libltlvisit_la_SOURCES = \
  clone.cc \
  destroy.cc \
  dotty.cc \
  dump.cc \
  tostring.cc \
  lunabbrev.cc \
  nenoform.cc \
  postfix.cc \
  tunabbrev.cc
