AM_CPPFLAGS = -I$(srcdir)/..
AM_CXXFLAGS = $(WARNING_CXXFLAGS)

noinst_LTLIBRARIES = libtgba.la
libtgba_la_SOURCES = \
  bddfactory.cc \
  bddfactory.hh \
  bddprint.cc \
  bddprint.hh \
  dictunion.cc \
  dictunion.hh \
  ltl2tgba.cc \
  ltl2tgba.hh \
  public.hh \
  state.hh \
  statebdd.cc \
  statebdd.hh \
  succiter.hh \
  succiterconcrete.cc \
  succiterconcrete.hh \
  tgba.hh \
  tgbabddconcrete.cc \
  tgbabddconcrete.hh \
  tgbabddconcretefactory.cc \
  tgbabddconcretefactory.hh \
  tgbabddconcreteproduct.cc \
  tgbabddconcreteproduct.hh \
  tgbabddcoredata.cc \
  tgbabddcoredata.hh \
  tgbabdddict.cc \
  tgbabdddict.hh \
  tgbabddfactory.hh \
  tgbabddtranslatefactory.cc \
  tgbabddtranslatefactory.hh \
  tgbaexplicit.cc \
  tgbaexplicit.hh \
  tgbaproduct.cc \
  tgbaproduct.hh \
  tgbatranslateproxy.cc \
  tgbatranslateproxy.hh
